templates/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS Elastic Beanstalk Docker Environment with VPC and Secrets Manager Access

Parameters:
  AppName:
    Type: String
    Description: Name of the Elastic Beanstalk Application
  EnvName:
    Type: String
    Description: Name of the Elastic Beanstalk Environment
  SolutionStackName:
    Type: String
    Description: The name of an Elastic Beanstalk supported platform version.
    Default: '64bit Amazon Linux 2 v3.4.11 running Docker'
  ACMCertificateARN:
    Type: String
    Description: The ARN of the ACM SSL Certificate for HTTPS
  S3Bucket:
    Type: String
    Description: The name of the S3 bucket containing the Dockerrun.aws.json file
  S3Key:
    Type: String
    Description: The S3 key (path) for the Dockerrun.aws.json file

Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsHostnames: true
      EnableDnsSupport: true

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  GatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyPublicSubnetOne:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']

  MyPublicSubnetTwo:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '10.0.2.0/24'
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [1, !GetAZs '']

  MyRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC

  MyRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociationOne:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MyPublicSubnetOne
      RouteTableId: !Ref MyRouteTable

  MyDynamoDBTable:
    Type: 'AWS::DynamoDB::Table'
    Properties:
      TableName: MyDynamoDBTable
      AttributeDefinitions:
        - AttributeName: Id
          AttributeType: S
      KeySchema:
        - AttributeName: Id
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST

  DynamoDBCredentialsSecret:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      Name: DynamoDBCredentials
      Description: 'Credentials for DynamoDB access'
      GenerateSecretString:
        SecretStringTemplate: '{"username":"my-dynamodb-user"}'
        GenerateStringKey: "password"
        PasswordLength: 16
      Tags:
        - Key: Name
          Value: DynamoDBCredentials

  SubnetRouteTableAssociationTwo:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MyPublicSubnetTwo
      RouteTableId: !Ref MyRouteTable

  SampleEnvironmentSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Security group for Elastic Beanstalk environment with load balancer'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0

  SampleRedisSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Security group for ElastiCache Redis'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '6379'
          ToPort: '6379'
          SourceSecurityGroupId: !Ref SampleEnvironmentSecurityGroup

  SampleInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: "/"
      Roles:
        - !Ref SampleRole

  SampleRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      Path: "/"
      Policies:
        - PolicyName: MySamplePolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: ['elasticbeanstalk:*', 'ec2:*', 'elasticloadbalancing:*', 'autoscaling:*', 'cloudwatch:*', 's3:*', 'logs:*']
                Resource: "*"
        - PolicyName: ElasticacheAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: [
                  'elasticache:Describe*',
                  'elasticache:List*'
                ]
                Resource: '*'
        - PolicyName: AccessDynamoDBSecret
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: ['secretsmanager:GetSecretValue']
                Resource: !Ref DynamoDBCredentialsSecret

  SampleApplication:
    Type: 'AWS::ElasticBeanstalk::Application'
    Properties:
      ApplicationName: !Ref AppName
      Description: 'Elastic Beanstalk Application running on Docker'

  MyAppVersion:
    Type: 'AWS::ElasticBeanstalk::ApplicationVersion'
    Properties:
      ApplicationName: !Ref SampleApplication
      Description: 'Version associated with the Dockerrun.aws.json'
      SourceBundle:
        S3Bucket: !Ref S3Bucket
        S3Key: !Ref S3Key

  SampleEnvironment:
    Type: 'AWS::ElasticBeanstalk::Environment'
    Properties:
      ApplicationName: !Ref SampleApplication
      EnvironmentName: !Ref EnvName
      SolutionStackName: !Ref SolutionStackName
      VersionLabel: !Ref MyAppVersion
      OptionSettings:
        - Namespace: 'aws:elasticbeanstalk:application:environment'
          OptionName: DYNAMODB_SECRET_ARN
          Value: !Ref DynamoDBCredentialsSecret
        - Namespace: 'aws:elasticbeanstalk:environment'
          OptionName: EnvironmentType
          Value: LoadBalanced
        - Namespace: 'aws:elasticbeanstalk:application'
          OptionName: Application Healthcheck URL
          Value: HTTP:80/
        - Namespace: 'aws:elbv2:listener:443'
          OptionName: ListenerEnabled
          Value: 'true'
        - Namespace: 'aws:elbv2:listener:443'
          OptionName: SSLCertificateArns
          Value: !Ref ACMCertificateARN
        - Namespace: 'aws:elbv2:listener:443'
          OptionName: DefaultProcess
          Value: default
        - Namespace: 'aws:elbv2:listener:443'
          OptionName: Protocol
          Value: HTTPS
        - Namespace: 'aws:ec2:vpc'
          OptionName: VPCId
          Value: !Ref MyVPC
        - Namespace: 'aws:ec2:vpc'
          OptionName: Subnets
          Value: !Join [',', [!Ref MyPublicSubnetOne, !Ref MyPublicSubnetTwo]]
        - Namespace: 'aws:autoscaling:launchconfiguration'
          OptionName: SecurityGroups
          Value: !Ref SampleEnvironmentSecurityGroup
        - Namespace: 'aws:autoscaling:launchconfiguration'
          OptionName: IamInstanceProfile
          Value: !Ref SampleInstanceProfile
      Tier:
        Name: WebServer
        Type: Standard
      LoadBalancerType: application

  MyElastiCacheSubnetGroup:
    Type: 'AWS::ElastiCache::SubnetGroup'
    Properties:
      Description: 'Subnet Group for ElastiCache Redis Cluster'
      SubnetIds:
        - !Ref MyPublicSubnetOne
        - !Ref MyPublicSubnetTwo

  MyRedisCluster:
    Type: 'AWS::ElastiCache::CacheCluster'
    Properties:
      Engine: 'redis'
      CacheNodeType: 'cache.t3.micro'
      NumCacheNodes: '1'
      CacheSubnetGroupName: !Ref MyElastiCacheSubnetGroup
      VpcSecurityGroupIds:
        - !GetAtt SampleEnvironmentSecurityGroup.GroupId

Outputs:
  EnvironmentURL:
    Description: 'URL of the AWS Elastic Beanstalk Environment'
    Value: !GetAtt SampleEnvironment.EndpointURL
  
  RedisEndpoint:
    Description: 'The endpoint of the ElastiCache Redis cluster'
    Value: !GetAtt MyRedisCluster.RedisEndpoint.Address
